@@ -3,6 +3,8 @@ examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -19,22 +21,22 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Log-FreeSWITCH-Line-Data/00-use.t
-t/Log-FreeSWITCH-Line-Data/01-version.t
-t/Log-FreeSWITCH-Line-Data/02-pod_coverage.t
-t/Log-FreeSWITCH-Line-Data/03-pod.t
-t/Log-FreeSWITCH-Line-Data/04-new.t
-t/Log-FreeSWITCH-Line-Data/05-date.t
-t/Log-FreeSWITCH-Line-Data/06-datetime_obj.t
-t/Log-FreeSWITCH-Line-Data/07-file.t
-t/Log-FreeSWITCH-Line-Data/08-file_line.t
-t/Log-FreeSWITCH-Line-Data/09-message.t
-t/Log-FreeSWITCH-Line-Data/10-raw.t
-t/Log-FreeSWITCH-Line-Data/11-time.t
-t/Log-FreeSWITCH-Line-Data/12-type.t
-t/Log-FreeSWITCH-Line/00-use.t
-t/Log-FreeSWITCH-Line/01-version.t
-t/Log-FreeSWITCH-Line/02-pod_coverage.t
-t/Log-FreeSWITCH-Line/03-pod.t
-t/Log-FreeSWITCH-Line/04-parse.t
-t/Log-FreeSWITCH-Line/05-serialize.t
+t/Log-FreeSWITCH-Line-Data/01-use.t
+t/Log-FreeSWITCH-Line-Data/02-version.t
+t/Log-FreeSWITCH-Line-Data/03-new.t
+t/Log-FreeSWITCH-Line-Data/04-date.t
+t/Log-FreeSWITCH-Line-Data/05-datetime_obj.t
+t/Log-FreeSWITCH-Line-Data/06-file.t
+t/Log-FreeSWITCH-Line-Data/07-file_line.t
+t/Log-FreeSWITCH-Line-Data/08-message.t
+t/Log-FreeSWITCH-Line-Data/09-raw.t
+t/Log-FreeSWITCH-Line-Data/10-time.t
+t/Log-FreeSWITCH-Line-Data/11-type.t
+t/Log-FreeSWITCH-Line/01-use.t
+t/Log-FreeSWITCH-Line/02-version.t
+t/Log-FreeSWITCH-Line/03-parse.t
+t/Log-FreeSWITCH-Line/04-serialize.t
+xt/Log-FreeSWITCH-Line-Data/01-pod_coverage.t
+xt/Log-FreeSWITCH-Line-Data/02-pod.t
+xt/Log-FreeSWITCH-Line/01-pod_coverage.t
+xt/Log-FreeSWITCH-Line/02-pod.t
