@@ -7,12 +7,9 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0.22
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.07
   Test::MockObject: 0
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -28,6 +25,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Error::Pure: 0.22
   Error::Pure::Always: 0.05
